charts/templates/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mimir-rewrite
  namespace: monitoring
spec:
  replacePath:
    path: /api/v1/push
