charts/templates/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: tempo-grpc
  namespace: monitoring
spec:
  entryPoints:
    - tempo-grpc
  routes:
    - match: HostSNI(`*`)
      services:
        - name: metric-dashboard-tempo
          port: 4317
